objects/BMCServiceDesk__SRM_FulfillmentInputs__c.object
<CustomObject>
    <description>Stores the input questions that a user must provide to submit the service request. It also stores the properties of the input questions.</description>
    <fields>
        <fullName>BMCServiceDesk__AdditionalInfo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Additional Info</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Condition__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Conditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ConditionsPostfix__c</fullName>
        <label>Conditions Postfix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ControlProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box if you want to create conditions that use the value of this field to invoke a template.</inlineHelpText>
        <label>Control Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DisplayInSecondColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box if you want to display this field in the second column.</inlineHelpText>
        <label>Display in Second Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DisplayinFullSpan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box if you want to display this field in full span.</inlineHelpText>
        <label>Display in Full Span</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLookupFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Filter</label>
        <referenceTo>BMCServiceDesk__LookupFilter__c</referenceTo>
        <relationshipLabel>Fulfillment Inputs</relationshipLabel>
        <relationshipName>Fulfillment_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKRequestDefinition__c</fullName>
        <label>Request Definition</label>
        <referenceTo>BMCServiceDesk__SRM_RequestDefinition__c</referenceTo>
        <relationshipName>Fulfillment_Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__From_import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used internally to control trigger action configured for importing templates from RF FF Migration package.</description>
        <inlineHelpText>Internally used</inlineHelpText>
        <label>From import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputValues__c</fullName>
        <label>Input Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Prompt__c</fullName>
        <label>Input/Prompt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Record_ID__c</fullName>
        <description>This field is used to hold Record ID in text form. This field will be used to rectify record IDs in Condition and Condition Postfix fields on trial org spawned from Trial Master Org.</description>
        <inlineHelpText>This field is used to hold Record ID in text form. This field will be used to rectify record IDs in Condition and Condition Postfix fields on trial org spawned from Trial Master Org.</inlineHelpText>
        <label>Record ID~</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ResponseType__c</fullName>
        <label>Response Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check box</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Header Section</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>Text Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Scrollable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays fields in a fixed area with a scroll bar.</inlineHelpText>
        <label>Scrollable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Tooltip__c</fullName>
        <inlineHelpText>Use this field to show a tooltip for the input field.</inlineHelpText>
        <label>Tooltip</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__URLInfo__c</fullName>
        <inlineHelpText>Use this field to enter a URL that provides more information.</inlineHelpText>
        <label>URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Validate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this check box if you want to create validation rules for the value of this field.</description>
        <inlineHelpText>Select this check box if you want to create validation rules for the value of this field.</inlineHelpText>
        <label>Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ValidationRule__c</fullName>
        <description>Create the validation rule for the value of this field.</description>
        <inlineHelpText>Create the validation rule for the value of this field.</inlineHelpText>
        <label>Validation Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VisibleLines__c</fullName>
        <inlineHelpText>Use this field to set the height of the input RTF textbox</inlineHelpText>
        <label>Visible Lines</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fulfillment Input</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BMCServiceDesk__Prompt__c</columns>
        <columns>BMCServiceDesk__InputValues__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Fulfillment Input #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>